--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: dl-book
 channels:
+  - pytorch-nightly
   - defaults
 dependencies:
   - _tflow_select=2.2.0
@@ -7,6 +8,7 @@ dependencies:
   - absl-py=1.4.0
   - aiohttp=3.9.3
   - aiosignal=1.2.0
+  - annotated-types=0.6.0
   - anyio=4.2.0
   - appnope=0.1.2
   - argon2-cffi=21.3.0
@@ -20,25 +22,41 @@ dependencies:
   - blas=1.0
   - bleach=4.1.0
   - blinker=1.6.2
+  - bottleneck=1.3.7
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
   - brotli-python=1.0.9
   - bzip2=1.0.8
   - c-ares=1.19.1
   - ca-certificates=2024.3.11
   - cachetools=4.2.2
+  - catalogue=2.0.10
   - certifi=2024.2.2
   - cffi=1.16.0
   - charset-normalizer=2.0.4
   - click=8.1.7
+  - cloudpathlib=0.16.0
+  - colorama=0.4.6
   - comm=0.2.1
+  - confection=0.1.4
+  - contourpy=1.2.0
   - cryptography=41.0.3
+  - cycler=0.11.0
+  - cymem=2.0.6
+  - cython-blis=0.7.9
   - debugpy=1.6.7
   - decorator=5.1.1
   - defusedxml=0.7.1
   - executing=0.8.3
+  - filelock=3.13.1
   - flatbuffers=2.0.0
+  - fonttools=4.25.0
+  - freetype=2.12.1
   - frozenlist=1.4.0
   - gast=0.4.0
   - giflib=5.2.1
+  - gmp=6.2.1
+  - gmpy2=2.1.2
   - google-auth=2.6.0
   - google-auth-oauthlib=0.5.2
   - google-pasta=0.2.0
@@ -68,9 +86,17 @@ dependencies:
   - jupyterlab_server=2.25.1
   - keras=2.12.0
   - keras-preprocessing=1.1.2
+  - kiwisolver=1.4.4
   - krb5=1.20.1
+  - langcodes=3.3.0
+  - lcms2=2.12
+  - lerc=3.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
   - libcurl=8.2.1
   - libcxx=14.0.6
+  - libdeflate=1.17
   - libedit=3.1.20230828
   - libev=4.33
   - libffi=3.4.4
@@ -82,30 +108,49 @@ dependencies:
   - libprotobuf=3.20.3
   - libsodium=1.0.18
   - libssh2=1.10.0
+  - libtiff=4.5.1
+  - libwebp-base=1.3.2
   - llvm-openmp=14.0.6
+  - lz4-c=1.9.4
   - markdown=3.4.1
+  - markdown-it-py=2.2.0
   - markupsafe=2.1.3
+  - matplotlib=3.8.0
+  - matplotlib-base=3.8.0
   - matplotlib-inline=0.1.6
+  - mdurl=0.1.0
   - mistune=2.0.4
+  - mpc=1.1.0
+  - mpfr=4.0.2
+  - mpmath=1.3.0
   - multidict=6.0.4
+  - munkres=1.1.4
+  - murmurhash=1.0.7
   - nbclient=0.8.0
   - nbconvert=7.10.0
   - nbformat=5.9.2
   - ncurses=6.4
   - nest-asyncio=1.6.0
+  - networkx=3.1
+  - nltk=3.8.1
   - notebook-shim=0.2.3
+  - numexpr=2.8.7
   - numpy=1.23.5
   - numpy-base=1.23.5
   - oauthlib=3.2.2
+  - openjpeg=2.3.0
   - openssl=1.1.1w
   - opt_einsum=3.3.0
   - overrides=7.4.0
   - packaging=23.2
+  - pandas=2.2.1
   - pandocfilters=1.5.0
   - parso=0.8.3
   - pexpect=4.8.0
+  - pillow=10.2.0
   - pip=23.3.1
   - platformdirs=3.10.0
+  - preshed=3.0.6
   - prometheus_client=0.14.1
   - prompt-toolkit=3.0.43
   - prompt_toolkit=3.0.43
@@ -116,37 +161,51 @@ dependencies:
   - pyasn1=0.4.8
   - pyasn1-modules=0.2.8
   - pycparser=2.21
+  - pydantic=2.5.3
+  - pydantic-core=2.14.6
   - pygments=2.15.1
   - pyjwt=2.4.0
   - pyopenssl=23.2.0
+  - pyparsing=3.0.9
   - pysocks=1.7.1
   - python=3.11.5
   - python-dateutil=2.8.2
   - python-fastjsonschema=2.16.2
   - python-flatbuffers=2.0
   - python-json-logger=2.0.7
+  - python-tzdata=2023.3
+  - pytorch=2.4.0.dev20240411
   - pytz=2023.3.post1
   - pyyaml=6.0.1
   - pyzmq=25.1.2
   - re2=2022.04.01
   - readline=8.2
   - referencing=0.30.2
+  - regex=2023.10.3
   - requests=2.31.0
   - requests-oauthlib=1.3.0
   - rfc3339-validator=0.1.4
   - rfc3986-validator=0.1.1
+  - rich=13.3.5
   - rpds-py=0.10.6
   - rsa=4.7.2
   - scikit-learn=1.3.0
   - scipy=1.12.0
   - send2trash=1.8.2
   - setuptools=68.2.2
+  - shellingham=1.5.0
   - six=1.16.0
+  - smart_open=5.2.1
   - snappy=1.1.10
   - sniffio=1.3.0
   - soupsieve=2.5
+  - spacy=3.7.2
+  - spacy-legacy=3.0.12
+  - spacy-loggers=1.0.4
   - sqlite=3.41.2
+  - srsly=2.4.8
   - stack_data=0.2.0
+  - sympy=1.12
   - tensorboard=2.12.1
   - tensorboard-data-server=0.7.0
   - tensorboard-plugin-wit=1.8.1
@@ -155,16 +214,24 @@ dependencies:
   - tensorflow-estimator=2.12.0
   - termcolor=2.1.0
   - terminado=0.17.1
+  - thinc=8.2.2
   - threadpoolctl=2.2.0
   - tinycss2=1.2.1
   - tk=8.6.12
+  - torchaudio=2.2.0.dev20240411
+  - torchtext=0.17.0.dev20240411
+  - torchvision=0.15.2
   - tornado=6.3.3
+  - tqdm=4.65.0
   - traitlets=5.7.1
+  - typer=0.9.0
   - typing-extensions=4.9.0
   - typing_extensions=4.9.0
   - tzdata=2024a
   - urllib3=2.1.0
+  - wasabi=0.9.1
   - wcwidth=0.2.5
+  - weasel=0.3.4
   - webencodings=0.5.1
   - websocket-client=0.58.0
   - werkzeug=2.3.8
@@ -175,4 +242,5 @@ dependencies:
   - yarl=1.9.3
   - zeromq=4.3.5
   - zlib=1.2.13
+  - zstd=1.5.5
 prefix: /Users/muhammadali/miniconda3/envs/dl-book
