--- a/environment.yml
+++ b/environment.yml
@@ -1,34 +1,40 @@
 name: dl-book
 channels:
   - pytorch-nightly
+  - conda-forge
   - defaults
 dependencies:
   - _tflow_select=2.2.0
   - abseil-cpp=20211102.0
-  - absl-py=1.4.0
-  - aiohttp=3.9.3
+  - absl-py=2.1.0
+  - aiohttp=3.9.5
   - aiosignal=1.2.0
   - annotated-types=0.6.0
-  - anyio=4.2.0
-  - appnope=0.1.2
+  - anyio=4.3.0
+  - appnope=0.1.4
   - argon2-cffi=21.3.0
   - argon2-cffi-bindings=21.2.0
+  - arrow=1.3.0
+  - astor=0.8.1
   - asttokens=2.0.5
   - astunparse=1.6.3
   - async-lru=2.0.4
-  - attrs=23.1.0
-  - babel=2.11.0
-  - beautifulsoup4=4.12.2
+  - async-timeout=4.0.3
+  - attrs=23.2.0
+  - babel=2.14.0
+  - beautifulsoup4=4.12.3
   - blas=1.0
   - bleach=4.1.0
-  - blinker=1.6.2
-  - bottleneck=1.3.7
+  - blinker=1.8.0
+  - bottleneck=1.3.8
   - brotli=1.0.9
   - brotli-bin=1.0.9
   - brotli-python=1.0.9
   - bzip2=1.0.8
   - c-ares=1.19.1
   - ca-certificates=2024.3.11
+  - cached-property=1.5.2
+  - cached_property=1.5.2
   - cachetools=4.2.2
   - catalogue=2.0.10
   - certifi=2024.2.2
@@ -37,210 +43,252 @@ dependencies:
   - click=8.1.7
   - cloudpathlib=0.16.0
   - colorama=0.4.6
-  - comm=0.2.1
+  - comm=0.2.2
   - confection=0.1.4
-  - contourpy=1.2.0
-  - cryptography=41.0.3
+  - contourpy=1.2.1
+  - cryptography=39.0.0
   - cycler=0.11.0
-  - cymem=2.0.6
-  - cython-blis=0.7.9
-  - debugpy=1.6.7
+  - cymem=2.0.8
+  - cython-blis=0.9.1
+  - debugpy=1.8.1
   - decorator=5.1.1
   - defusedxml=0.7.1
+  - entrypoints=0.4
+  - exceptiongroup=1.2.0
   - executing=0.8.3
-  - filelock=3.13.1
+  - filelock=3.13.4
   - flatbuffers=2.0.0
   - fonttools=4.25.0
+  - fqdn=1.5.1
   - freetype=2.12.1
-  - frozenlist=1.4.0
+  - frozenlist=1.4.1
   - gast=0.4.0
   - giflib=5.2.1
   - gmp=6.2.1
   - gmpy2=2.1.2
   - google-auth=2.6.0
-  - google-auth-oauthlib=0.5.2
+  - google-auth-oauthlib=1.0.0
   - google-pasta=0.2.0
   - grpc-cpp=1.48.2
   - grpcio=1.48.2
+  - h11=0.14.0
+  - h2=4.1.0
   - h5py=3.9.0
-  - hdf5=1.12.1
+  - hdf5=1.14.0
+  - hpack=4.0.0
+  - httpcore=1.0.5
+  - httpx=0.27.0
+  - hyperframe=6.0.1
   - icu=68.1
-  - idna=3.4
-  - ipykernel=6.28.0
-  - ipython=8.20.0
-  - jedi=0.18.1
+  - idna=3.7
+  - importlib-metadata=7.1.0
+  - importlib-resources=6.4.0
+  - importlib_metadata=7.1.0
+  - importlib_resources=6.4.0
+  - ipykernel=6.29.3
+  - ipython=8.18.1
+  - ipywidgets=8.1.2
+  - isoduration=20.11.0
+  - jedi=0.19.1
   - jinja2=3.1.3
-  - joblib=1.2.0
+  - joblib=1.4.0
   - jpeg=9e
   - json5=0.9.6
-  - jsonschema=4.19.2
-  - jsonschema-specifications=2023.7.1
-  - jupyter-lsp=2.2.0
-  - jupyter_client=8.6.0
-  - jupyter_core=5.5.0
-  - jupyter_events=0.8.0
-  - jupyter_server=2.10.0
-  - jupyter_server_terminals=0.4.4
-  - jupyterlab=4.0.11
+  - jsonpointer=2.4
+  - jsonschema=4.21.1
+  - jsonschema-specifications=2023.12.1
+  - jsonschema-with-format-nongpl=4.21.1
+  - jupyter-lsp=2.2.5
+  - jupyter_client=8.6.1
+  - jupyter_core=5.7.2
+  - jupyter_events=0.10.0
+  - jupyter_server=2.14.0
+  - jupyter_server_terminals=0.5.3
+  - jupyterlab=4.1.8
   - jupyterlab_pygments=0.1.2
-  - jupyterlab_server=2.25.1
+  - jupyterlab_server=2.27.1
+  - jupyterlab_widgets=3.0.10
   - keras=2.12.0
   - keras-preprocessing=1.1.2
-  - kiwisolver=1.4.4
+  - kiwisolver=1.4.5
   - krb5=1.20.1
   - langcodes=3.3.0
   - lcms2=2.12
   - lerc=3.0
+  - libabseil=20211102.0
+  - libaec=1.1.3
+  - libblas=3.9.0
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
   - libbrotlienc=1.0.9
+  - libcblas=3.9.0
   - libcurl=8.2.1
-  - libcxx=14.0.6
+  - libcxx=16.0.6
   - libdeflate=1.17
   - libedit=3.1.20230828
   - libev=4.33
   - libffi=3.4.4
   - libgfortran=5.0.0
-  - libgfortran5=11.3.0
+  - libgfortran5=12.2.0
+  - liblapack=3.9.0
   - libnghttp2=1.52.0
   - libopenblas=0.3.21
   - libpng=1.6.39
   - libprotobuf=3.20.3
   - libsodium=1.0.18
+  - libsqlite=3.45.3
   - libssh2=1.10.0
   - libtiff=4.5.1
   - libwebp-base=1.3.2
+  - libzlib=1.2.13
   - llvm-openmp=14.0.6
   - lz4-c=1.9.4
-  - markdown=3.4.1
-  - markdown-it-py=2.2.0
-  - markupsafe=2.1.3
-  - matplotlib=3.8.0
-  - matplotlib-base=3.8.0
-  - matplotlib-inline=0.1.6
-  - mdurl=0.1.0
-  - mistune=2.0.4
-  - mpc=1.1.0
-  - mpfr=4.0.2
+  - markdown=3.6
+  - markdown-it-py=3.0.0
+  - markupsafe=2.1.5
+  - matplotlib=3.8.4
+  - matplotlib-base=3.8.4
+  - matplotlib-inline=0.1.7
+  - mdurl=0.1.2
+  - mistune=3.0.2
+  - mpc=1.3.1
+  - mpfr=4.2.1
   - mpmath=1.3.0
-  - multidict=6.0.4
+  - multidict=6.0.5
   - munkres=1.1.4
-  - murmurhash=1.0.7
-  - nbclient=0.8.0
-  - nbconvert=7.10.0
-  - nbformat=5.9.2
+  - murmurhash=1.0.10
+  - nbclient=0.10.0
+  - nbconvert=7.16.3
+  - nbconvert-core=7.16.3
+  - nbconvert-pandoc=7.16.3
+  - nbformat=5.10.4
   - ncurses=6.4
   - nest-asyncio=1.6.0
-  - networkx=3.1
+  - networkx=3.2.1
   - nltk=3.8.1
-  - notebook-shim=0.2.3
-  - numexpr=2.8.7
+  - notebook-shim=0.2.4
+  - numexpr=2.9.0
   - numpy=1.23.5
   - numpy-base=1.23.5
   - oauthlib=3.2.2
   - openjpeg=2.3.0
   - openssl=1.1.1w
   - opt_einsum=3.3.0
-  - overrides=7.4.0
-  - packaging=23.2
-  - pandas=2.2.1
+  - overrides=7.7.0
+  - packaging=24.0
+  - pandas=2.2.2
+  - pandoc=3.1.13
   - pandocfilters=1.5.0
   - parso=0.8.3
+  - pathy=0.10.3
   - pexpect=4.8.0
+  - pickleshare=0.7.5
   - pillow=10.2.0
-  - pip=23.3.1
-  - platformdirs=3.10.0
-  - preshed=3.0.6
-  - prometheus_client=0.14.1
-  - prompt-toolkit=3.0.43
-  - prompt_toolkit=3.0.43
+  - pip=24.0
+  - pkgutil-resolve-name=1.3.10
+  - platformdirs=4.2.1
+  - pooch=1.8.1
+  - preshed=3.0.9
+  - prometheus_client=0.20.0
+  - prompt-toolkit=3.0.42
+  - prompt_toolkit=3.0.42
   - protobuf=3.20.3
-  - psutil=5.9.0
+  - psutil=5.9.8
   - ptyprocess=0.7.0
   - pure_eval=0.2.2
   - pyasn1=0.4.8
   - pyasn1-modules=0.2.8
   - pycparser=2.21
-  - pydantic=2.5.3
-  - pydantic-core=2.14.6
-  - pygments=2.15.1
-  - pyjwt=2.4.0
+  - pydantic=1.9.2
+  - pydantic-core=2.18.2
+  - pygments=2.17.2
+  - pyjwt=2.8.0
+  - pyobjc-core=10.2
+  - pyobjc-framework-cocoa=10.2
   - pyopenssl=23.2.0
-  - pyparsing=3.0.9
+  - pyparsing=3.1.2
   - pysocks=1.7.1
-  - python=3.11.5
+  - python=3.9.15
   - python-dateutil=2.8.2
-  - python-fastjsonschema=2.16.2
-  - python-flatbuffers=2.0
+  - python-fastjsonschema=2.19.1
+  - python-flatbuffers=24.3.25
   - python-json-logger=2.0.7
   - python-tzdata=2023.3
-  - pytorch=2.4.0.dev20240411
-  - pytz=2023.3.post1
+  - python_abi=3.9
+  - pytorch=2.4.0.dev20240427
+  - pytz=2024.1
   - pyyaml=6.0.1
-  - pyzmq=25.1.2
+  - pyzmq=26.0.2
   - re2=2022.04.01
   - readline=8.2
-  - referencing=0.30.2
-  - regex=2023.10.3
+  - referencing=0.35.0
+  - regex=2024.4.16
   - requests=2.31.0
   - requests-oauthlib=1.3.0
   - rfc3339-validator=0.1.4
   - rfc3986-validator=0.1.1
-  - rich=13.3.5
-  - rpds-py=0.10.6
+  - rich=13.7.1
+  - rpds-py=0.18.0
   - rsa=4.7.2
-  - scikit-learn=1.3.0
-  - scipy=1.12.0
-  - send2trash=1.8.2
-  - setuptools=68.2.2
-  - shellingham=1.5.0
+  - scikit-learn=1.2.2
+  - scipy=1.10.1
+  - send2trash=1.8.3
+  - setuptools=69.5.1
+  - shellingham=1.5.4
   - six=1.16.0
-  - smart_open=5.2.1
+  - smart_open=6.4.0
   - snappy=1.1.10
-  - sniffio=1.3.0
+  - sniffio=1.3.1
   - soupsieve=2.5
-  - spacy=3.7.2
+  - spacy=3.5.0
   - spacy-legacy=3.0.12
-  - spacy-loggers=1.0.4
+  - spacy-loggers=1.0.5
   - sqlite=3.41.2
   - srsly=2.4.8
   - stack_data=0.2.0
   - sympy=1.12
-  - tensorboard=2.12.1
+  - tensorboard=2.12.3
   - tensorboard-data-server=0.7.0
   - tensorboard-plugin-wit=1.8.1
   - tensorflow=2.12.0
   - tensorflow-base=2.12.0
   - tensorflow-estimator=2.12.0
-  - termcolor=2.1.0
-  - terminado=0.17.1
-  - thinc=8.2.2
+  - termcolor=2.4.0
+  - terminado=0.18.1
+  - thinc=8.1.1
   - threadpoolctl=2.2.0
-  - tinycss2=1.2.1
+  - tinycss2=1.3.0
   - tk=8.6.12
-  - torchaudio=2.2.0.dev20240411
-  - torchtext=0.17.0.dev20240411
+  - tomli=2.0.1
+  - torchaudio=2.2.0.dev20240427
+  - torchtext=0.17.0.dev20240427
   - torchvision=0.15.2
-  - tornado=6.3.3
-  - tqdm=4.65.0
-  - traitlets=5.7.1
-  - typer=0.9.0
-  - typing-extensions=4.9.0
-  - typing_extensions=4.9.0
+  - tornado=6.4
+  - tqdm=4.66.2
+  - traitlets=5.14.3
+  - typer=0.4.2
+  - types-python-dateutil=2.9.0.20240316
+  - typing-extensions=4.11.0
+  - typing_extensions=4.11.0
+  - typing_utils=0.1.0
   - tzdata=2024a
-  - urllib3=2.1.0
-  - wasabi=0.9.1
+  - uri-template=1.3.0
+  - urllib3=2.2.1
+  - wasabi=0.10.1
   - wcwidth=0.2.5
   - weasel=0.3.4
+  - webcolors=1.13
   - webencodings=0.5.1
-  - websocket-client=0.58.0
-  - werkzeug=2.3.8
+  - websocket-client=1.8.0
+  - werkzeug=3.0.2
   - wheel=0.35.1
-  - wrapt=1.14.1
+  - widgetsnbextension=4.0.10
+  - wrapt=1.16.0
   - xz=5.4.6
   - yaml=0.2.5
-  - yarl=1.9.3
+  - yarl=1.9.4
   - zeromq=4.3.5
+  - zipp=3.17.0
   - zlib=1.2.13
   - zstd=1.5.5
 prefix: /Users/muhammadali/miniconda3/envs/dl-book
