--- a/environment.yml
+++ b/environment.yml
@@ -20,6 +20,7 @@ dependencies:
   - astunparse=1.6.3
   - async-lru=2.0.4
   - async-timeout=4.0.3
+  - atk-1.0=2.38.0
   - attrs=23.2.0
   - babel=2.14.0
   - beautifulsoup4=4.12.3
@@ -36,6 +37,7 @@ dependencies:
   - cached-property=1.5.2
   - cached_property=1.5.2
   - cachetools=4.2.2
+  - cairo=1.16.0
   - catalogue=2.0.10
   - certifi=2024.2.2
   - cffi=1.16.0
@@ -56,24 +58,43 @@ dependencies:
   - entrypoints=0.4
   - exceptiongroup=1.2.0
   - executing=0.8.3
+  - expat=2.6.2
   - filelock=3.13.4
   - flatbuffers=2.0.0
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
   - fonttools=4.25.0
   - fqdn=1.5.1
   - freetype=2.12.1
+  - fribidi=1.0.10
   - frozenlist=1.4.1
   - gast=0.4.0
+  - gdk-pixbuf=2.42.10
+  - gettext=0.22.5
+  - gettext-tools=0.22.5
   - giflib=5.2.1
+  - glib=2.80.0
+  - glib-tools=2.80.0
   - gmp=6.2.1
   - gmpy2=2.1.2
   - google-auth=2.6.0
   - google-auth-oauthlib=1.0.0
   - google-pasta=0.2.0
+  - graphite2=1.3.14
+  - graphviz=4.0.0
   - grpc-cpp=1.48.2
   - grpcio=1.48.2
+  - gtk2=2.24.33
+  - gts=0.7.6
   - h11=0.14.0
   - h2=4.1.0
   - h5py=3.9.0
+  - harfbuzz=4.3.0
   - hdf5=1.14.0
   - hpack=4.0.0
   - httpcore=1.0.5
@@ -117,6 +138,8 @@ dependencies:
   - lerc=3.0
   - libabseil=20211102.0
   - libaec=1.1.3
+  - libasprintf=0.22.5
+  - libasprintf-devel=0.22.5
   - libblas=3.9.0
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
@@ -127,21 +150,32 @@ dependencies:
   - libdeflate=1.17
   - libedit=3.1.20230828
   - libev=4.33
+  - libexpat=2.6.2
   - libffi=3.4.4
+  - libgd=2.3.3
+  - libgettextpo=0.22.5
+  - libgettextpo-devel=0.22.5
   - libgfortran=5.0.0
   - libgfortran5=12.2.0
+  - libglib=2.80.0
+  - libiconv=1.17
+  - libintl=0.22.5
+  - libintl-devel=0.22.5
   - liblapack=3.9.0
   - libnghttp2=1.52.0
   - libopenblas=0.3.21
   - libpng=1.6.39
   - libprotobuf=3.20.3
+  - librsvg=2.54.4
   - libsodium=1.0.18
   - libsqlite=3.45.3
   - libssh2=1.10.0
   - libtiff=4.5.1
+  - libtool=2.4.7
   - libwebp-base=1.3.2
+  - libxml2=2.10.4
   - libzlib=1.2.13
-  - llvm-openmp=14.0.6
+  - llvm-openmp=15.0.7
   - lz4-c=1.9.4
   - markdown=3.6
   - markdown-it-py=3.0.0
@@ -179,12 +213,16 @@ dependencies:
   - pandas=2.2.2
   - pandoc=3.1.13
   - pandocfilters=1.5.0
+  - pango=1.50.7
   - parso=0.8.3
   - pathy=0.10.3
+  - patsy=0.5.6
+  - pcre2=10.43
   - pexpect=4.8.0
   - pickleshare=0.7.5
   - pillow=10.2.0
   - pip=24.0
+  - pixman=0.43.4
   - pkgutil-resolve-name=1.3.10
   - platformdirs=4.2.1
   - pooch=1.8.1
@@ -201,6 +239,7 @@ dependencies:
   - pycparser=2.21
   - pydantic=1.9.2
   - pydantic-core=2.18.2
+  - pydot=2.0.0
   - pygments=2.17.2
   - pyjwt=2.8.0
   - pyobjc-core=10.2
@@ -215,7 +254,7 @@ dependencies:
   - python-json-logger=2.0.7
   - python-tzdata=2023.3
   - python_abi=3.9
-  - pytorch=2.4.0.dev20240427
+  - pytorch=2.4.0.dev20240504
   - pytz=2024.1
   - pyyaml=6.0.1
   - pyzmq=26.0.2
@@ -230,8 +269,10 @@ dependencies:
   - rich=13.7.1
   - rpds-py=0.18.0
   - rsa=4.7.2
-  - scikit-learn=1.2.2
+  - scikit-learn=1.3.1
   - scipy=1.10.1
+  - seaborn=0.13.2
+  - seaborn-base=0.13.2
   - send2trash=1.8.3
   - setuptools=69.5.1
   - shellingham=1.5.4
@@ -246,6 +287,7 @@ dependencies:
   - sqlite=3.41.2
   - srsly=2.4.8
   - stack_data=0.2.0
+  - statsmodels=0.14.1
   - sympy=1.12
   - tensorboard=2.12.3
   - tensorboard-data-server=0.7.0
@@ -260,8 +302,8 @@ dependencies:
   - tinycss2=1.3.0
   - tk=8.6.12
   - tomli=2.0.1
-  - torchaudio=2.2.0.dev20240427
-  - torchtext=0.17.0.dev20240427
+  - torchaudio=2.2.0.dev20240504
+  - torchtext=0.17.0.dev20240504
   - torchvision=0.15.2
   - tornado=6.4
   - tqdm=4.66.2
@@ -291,4 +333,9 @@ dependencies:
   - zipp=3.17.0
   - zlib=1.2.13
   - zstd=1.5.5
+  - pip:
+      - kaggle==1.6.12
+      - python-graphviz==0.20.3
+      - python-slugify==8.0.4
+      - text-unidecode==1.3
 prefix: /Users/muhammadali/miniconda3/envs/dl-book
